--- a/package.json
+++ b/package.json
@@ -19,6 +19,18 @@
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.24.0"
+    "eslint-plugin-import": "^2.24.0",
+    "husky": "^7.0.1"
+  },
+  "lint-staged": {
+    "*.js": [
+      "./node_modules/.bin/eslint --ignore-path .gitignore",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
