--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "test-ex",
   "version": "0.0.0",
   "private": true,
+  
   "scripts": {
     "start": "nodemon --exec babel-node app",
-    "lint": "./node_modules/.bin/eslint --fix ."
+    "lint": "./node_modules/.bin/eslint --fix .",
+    "test": "jest",
+    "debug": "node --inspect babel-node app" 
   },
   "lint-staged": {
     "*.js": [
@@ -20,10 +23,13 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
+    "jest": "^27.2.5",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
@@ -35,6 +41,7 @@
     "@babel/cli": "^7.15.4",
     "@babel/core": "^7.15.4",
     "@babel/node": "^7.15.4",
+    "@babel/plugin-transform-runtime": "^7.15.8",
     "@babel/preset-env": "^7.15.4",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
