--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     }
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
