--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "./node_modules/.bin/babel-node app",
+    "start": "node app",
     "lint": "./node_modules/.bin/eslint --fix ."
   },
   "lint-staged": {
