--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon --exec babel-node app",
+    "start": "nodemon app",
     "lint": "./node_modules/.bin/eslint --fix ."
   },
   "lint-staged": {
@@ -18,6 +18,8 @@
     }
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-node": "^0.0.1-security",
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -27,6 +29,7 @@
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
+    "nodemon": "^2.0.14",
     "pg": "^8.7.1",
     "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3"
