--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT = 5000
 PGHOST = localhost
-PGDATABASE = 'test_db'
+PGDATABASE = 'postgres'
 PGPORT = 5432
 PGPASSWORD = 'admin'
 PGUSER = 'postgres'
